--- a/KidsAR-Android/app/src/main/res/layout/activity_rateus.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_rateus.xml
@@ -10,5 +10,5 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/background" />
+        android:src="@drawable/welcome_bg" />
 </RelativeLayout>
