--- a/KidsAR-Android/app/src/main/res/layout/alertdialog.xml
+++ b/KidsAR-Android/app/src/main/res/layout/alertdialog.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/comic_sans_ms"
+        android:fontFamily="@font/gothamrounded_medium"
         android:text="Title"
         android:textColor="@color/darkgray"
         android:textSize="19sp" />
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:focusable="true"
-        android:fontFamily="@font/comic_sans_ms"
+        android:fontFamily="@font/gothamrounded_book"
         android:padding="5dp"
         android:text="Alert Message"
         android:textColor="@color/ar_black"
@@ -44,7 +44,7 @@
             android:layout_margin="3dp"
             android:alpha=".6"
             android:background="@drawable/button_back_icon"
-            android:fontFamily="@font/comic_sans_ms_bold"
+            android:fontFamily="@font/gothamrounded_medium"
             android:padding="3dp"
             android:text="Cancel"
             android:textColor="@color/white" />
@@ -56,7 +56,7 @@
             android:layout_margin="3dp"
             android:alpha=".6"
             android:background="@drawable/button_back_icon"
-            android:fontFamily="@font/comic_sans_ms_bold"
+            android:fontFamily="@font/gothamrounded_medium"
             android:padding="3dp"
             android:text="OK"
             android:textColor="@color/white" />
