--- a/KidsAR-Android/app/src/main/res/layout/activity_contact.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_contact.xml
@@ -64,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:fontFamily="@font/gothamrounded_medium"
+                android:fontFamily="@font/gothamrounded_book"
                 android:paddingEnd="15dp"
                 android:paddingStart="15dp"
                 android:text="Name"
@@ -77,7 +77,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_round_back"
-                android:fontFamily="@font/gothamrounded_medium"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+                android:fontFamily="@font/gothamrounded_book"
                 android:imeOptions="actionNext"
                 android:paddingBottom="5dp"
                 android:paddingEnd="15dp"
@@ -93,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/gothamrounded_medium"
+                android:fontFamily="@font/gothamrounded_book"
                 android:paddingEnd="15dp"
                 android:paddingStart="15dp"
                 android:text="Email ID"
@@ -106,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_round_back"
-                android:fontFamily="@font/gothamrounded_medium"
+                android:fontFamily="@font/gothamrounded_book"
                 android:imeOptions="actionNext"
                 android:paddingBottom="5dp"
                 android:paddingEnd="15dp"
@@ -122,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/gothamrounded_medium"
+                android:fontFamily="@font/gothamrounded_book"
                 android:paddingEnd="15dp"
                 android:paddingStart="15dp"
                 android:text="Query"
@@ -135,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:background="@drawable/edittext_round_back"
-                android:fontFamily="@font/gothamrounded_medium"
+                android:fontFamily="@font/gothamrounded_book"
                 android:gravity="start|top"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
