--- a/KidsAR-Android/app/src/main/res/layout/activity_privacy.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_privacy.xml
@@ -37,11 +37,10 @@
 
         <ProgressBar
             android:id="@+id/progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentEnd="true"
             android:layout_gravity="center"
-            android:layout_margin="2dp"
             android:layout_marginEnd="10dp"
             android:indeterminateTint="@color/colorHome"
             android:scrollbarSize="30dp"
