--- a/KidsAR-Android/app/src/main/res/layout/helpmodel_item.xml
+++ b/KidsAR-Android/app/src/main/res/layout/helpmodel_item.xml
@@ -21,8 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:fontFamily="@font/gothamrounded_light"
-        android:padding="3dp"
+        android:fontFamily="@font/gothamrounded_book"
+        android:lineSpacingExtra="10dp"
+        android:padding="1dp"
         android:text="Sample Text"
         android:textColor="@color/button_icon_color"
         android:textSize="16sp" />
