--- a/KidsAR-Android/app/src/main/res/layout/activity_puzzle.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_puzzle.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/puzzle_background"
-    android:orientation="vertical">
+    >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/puzzles_header"
+        android:visibility="visible" />
 
     <RelativeLayout
         android:id="@+id/tool_layout"
@@ -42,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:scrollbars="vertical" />
-</LinearLayout>
+        android:scrollbars="vertical"
+        android:layout_below="@id/tool_layout"/>
+</RelativeLayout>
 
