--- a/KidsAR-Android/app/src/main/res/layout/dialog_congrats.xml
+++ b/KidsAR-Android/app/src/main/res/layout/dialog_congrats.xml
@@ -27,7 +27,8 @@
             android:layout_height="30dp"
             android:layout_gravity="end"
             android:layout_margin="10dp"
-            android:src="@drawable/animal_close" />
+            android:src="@drawable/animal_close"
+            android:visibility="gone"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -49,23 +50,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:gravity="bottom|center_horizontal">
-
+            <TextView
+                android:id="@+id/playexit"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="40dp"
+                android:background="#CC0000"
+                android:fontFamily="@font/gothamrounded_medium"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Exit"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
             <TextView
                 android:id="@+id/playnext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
                 android:layout_marginBottom="40dp"
                 android:background="@color/gallery_line_color"
                 android:fontFamily="@font/gothamrounded_medium"
-                android:paddingBottom="7dp"
-                android:paddingEnd="35dp"
-                android:paddingStart="35dp"
-                android:paddingTop="7dp"
+                android:gravity="center_vertical|center_horizontal"
                 android:text="Play Next"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+
 
         </LinearLayout>
     </LinearLayout>
